# Rubiks_Cube

./: CMakeLists.txt
RUBIKS_CUBE/: CMakeLists.txt  main.c  rubiks.c  rubiks.h
